# nexorix-framework-gm.linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  config.json.exemple  deploy.ps1  error  gm.amx  start.sh
.kiro/hooks/: auto-compile-pawn.kiro.hook
Server/: CMakeLists.txt
Server/Components/: CMakeLists.txt
Server/Components/Discord_bak/: CMakeLists.txt  discord_main.cpp  discord_main.hpp  lua_discord.cpp
Server/Components/Lua/: CMakeLists.txt  lua_api.cpp  lua_api.hpp  lua_callbacks.cpp  lua_db.cpp  lua_db.hpp  lua_main.cpp  lua_main.hpp  lua_scripts.cpp  lua_scripts.hpp
Server/Components/Lua/Discord/: discord_main.cpp  discord_main.hpp  lua_discord.cpp  lua_discord.hpp
Server/Components/NPCs/Node/: node.cpp
Server/Components/Pawn/: main.cpp
Server/Components/Pawn/Manager/: Manager.cpp
Server/Components/Pawn/PluginManager/: PluginManager.cpp
Server/Components/Pawn/Scripting/Core/: Natives.cpp
Server/Components/Pawn/Scripting/Database/: Natives.cpp
Server/Components/Recordings/: recordings_main.cpp
Server/Source/: CMakeLists.txt  core_impl.hpp  server.cpp
gm-nexorix/: .gitignore  config.json  lua_contas.db  new.txt
gm-nexorix/lua/: .gitignore  README.md  main.lua
gm-nexorix/lua/core/: hooks.lua  hotreload.lua  init.lua
gm-nexorix/lua/systems/: discord.lua
gm-nexorix/models/: mods.json
gm-nexorix/scripts/: gm.pwn
gm-nexorix/sdk/: rus.txt
gm-nexorix/sdk/include/: ac.inc  apibridge.inc  nexorix.inc  playerprogress.inc  rus.txt  vynixc-discord-cmd.inc
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lua/core/: hooks.luac  hotreload.luac  init.luac
lua/gamemode/: main.lua
lua/include/: nexorix.lua  nexorix.luac  nexorix_voice.lua  nexorix_voice.luac
scripts/: gm.amx
sdk/: GM.amx  pawncc.exe.bak
